--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-fastapi
-uvicorn
-sqlalchemy
-passlib
-bcrypt
-python-jose
+fastapi==0.75.0
+jose==1.0.0
+passlib==1.7.4
+pydantic==1.9.0
+python-dotenv==0.19.2
+SQLAlchemy==1.4.32
+uvicorn==0.11.3
+python-multipart==0.0.5
+jinja2==3.0.3
